[tool.poetry]
name = "test_package2"
version = "0.1.0"
description = "developer test package"
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
PyYAML = "^6.0.1"

# // extras
pytest = { version = "7.3.2", python = ">=3.7", optional = true }

[tool.poetry.extras]
tests = [
    "pytest",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
